test/classes/ferguson/delete-free/unique3.good
unique3.chpl:9: In function 'foo':
unique3.chpl:13: error: Owned may not be assigned. Use lhs.reset(rhs.release()).
